Mon Oct  9 23:58:21 2006  Tim Janik  <timj@gtk.org>

	* birnetutils.cc: fixed typo in condition.

	* birnet-zintern.cc: fixed debugging statement.

Mon Oct  9 23:47:30 2006  Tim Janik  <timj@gtk.org>

	* birnetcdefs.h: ensure we have FALSE, TRUE, ABS, MIN, MAX, CLAMP,
	ARRAY_SIZE and STRFUNC.

	* birnetutils.hh: don't publically include glib.h, adapted affected
	callers. pre-declare ThreadTable to use atomic functions in class
	ReferenceCountImpl.

	* birnetutils.hh, birnetutils.cc: added string utilities to convert
	strings to and from bool, int, uint, float, double and double vector.
	added utilities to convert strings tolower, toupper, totitle, to strip
	strings and to print into strings in printf style.
	added uuid string test and comparison and errno to string conversion.

	* birnet-zintern.cc: conveted somewhat more to C++.

	* tests/strings.cc: added uuid string functions tests.

Mon Oct  9 23:00:39 2006  Tim Janik  <timj@gtk.org>

	* birnetutf8.hh, birnetutf8.cc: wrap GLib isalnum() and friends to 
	classify unichar characters. provide inline functions to increment
	and decrement positions in UTF-8 strings.

	* tests/strings.cc: new test program to test birnetutf8.hh functions.

Sun Oct  8 16:20:18 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: ship birnetcdefs.h.

	* birnetthreadimpl.cc: added internal default constructors for gcc-3.3.

	* birnetmsg.hh: reordered function attributes on constructors for gcc-3.3.

Sat Oct  7 23:58:58 2006  Tim Janik  <timj@gtk.org>

	* birnetcdefs.h (BIRNET_ABORT_NORETURN): added noreturn call to macros 
	which can't return, to silence compiler in some cases.

Sat Oct  7 18:32:00 2006  Tim Janik  <timj@gtk.org>

	* birnetcdefs.h: moved non-symbol C API bits from birnetcore.h and
	birnethread.h bits here. extended threading table to also cover the
	normal threading API.

	* birnetcpu.hh, birnetcpu.cc: minor API changes.

	* birnetthread.hh, birnetthread.cc: use global threading table to
	access thread layer.
