@@ -1,3 +1,8 @@
+Tue Oct 10 01:34:05 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetcdefs.h: provide extra prototype for extern inline functions
+	for newer gcc.
+
 Mon Oct  9 23:58:21 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetutils.cc: fixed typo in condition.
